--- a/style.css
+++ b/style.css
@@ -2,25 +2,19 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;900&family=Poppins:wght@300;400;500;600&display=swap");
 
-/* ------------------------------------------------------------------------------------------ */
-
 body {
   font-family: "Montserrat", sans-serif;
   font-family: "Poppins", sans-serif;
-  /* background: linear-gradient(to right, black, purple, #ff6ba4, #ffb6d1); */
-  background: radial-gradient( purple, black 60%);
-  color: white; */
-  /* background-color: #222327;
-  color: white; */
+  background: radial-gradient(purple, black 60%);
+  color: white;
 }
 
 h1 {
   background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  background-clip: none;
 }
-
-/* ------------------------------------------------------------------------------------------ */
 
 * {
   margin: 0;
@@ -108,7 +102,6 @@ a:hover {
   justify-content: space-between;
   height: 24px;
   width: 30px;
-  margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -121,6 +114,8 @@ a:hover {
 
 .menu-links {
   position: absolute;
+  z-index: 10;
+  margin-top: 20px;
   top: 100%;
   right: 0;
   background-color: rgb(21, 21, 21);
@@ -197,6 +192,12 @@ section {
   gap: 5rem;
   height: 80vh;
 }
+.profile-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
 
 .section__pic-container {
   display: flex;
@@ -233,9 +234,12 @@ section {
   flex-direction: column;
   justify-content: center;
   margin-top: 1rem;
-  gap: 1rem;
+  gap: 2rem;
 }
-.scroll-down{
+
+/* ICONS */
+
+.scroll-down {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
@@ -250,16 +254,27 @@ section {
   align-items: center;
 }
 
-/* ICONS */
-
 .icon {
   cursor: pointer;
-  height: 2rem;
+  height: 1.3rem;
 }
-.scroll-text > img{
+
+.scroll-text > img {
   height: 1rem;
   width: 1rem;
   margin-left: 5px;
+}
+
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+  transition: all 0.5s;
+}
+
+.arrow:hover {
+  transform: translate(0px, 10px);
+  transition: all 0.5s ease-in-out;
 }
 
 /* BUTTONS */
@@ -301,14 +316,13 @@ section {
 .btn-color-2 {
   background: none;
 }
-#profile .btn-color-2{
+#profile .btn-color-2 {
   color: white;
 }
 
 .btn-color-2:hover {
   border: rgb(255, 255, 255);
 }
-
 
 /* ABOUT SECTION */
 
@@ -336,29 +350,32 @@ section {
   border-radius: 2rem;
 }
 
-.arrow {
-  position: absolute;
-  right: -5rem;
-  bottom: 2.5rem;
-}
-
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: rgb(255, 255, 255);
+  background: rgb(34, 38, 47);
   border-radius: 2rem;
-  border: rgb(0, 0, 0) 0.1rem solid;
-  border-color: rgb(0, 0, 0);
+  /* border: rgb(255, 253, 253) 0.1rem solid;
+  border-color: rgb(255, 255, 255); */
   text-align: center;
-  box-shadow: 5px 10px 20px #000000
+  box-shadow: 5px 10px 20px #000000;
 }
 
-.details-container:hover{   
-  box-shadow: 5px 10px 50px  #000000
+.details-container:hover {
+  box-shadow: 5px 10px 50px #000000;
 }
 
-.details-container > p,h3 {
-  color: black;
+.details-container > p,
+h3 {
+  color: rgb(255, 255, 255);
+}
+
+.details-container > p {
+  text-align: start;
+}
+.details-container span{
+  font-size: smaller;
+  color: #f571bc;
 }
 .section-container {
   gap: 4rem;
@@ -371,6 +388,9 @@ section {
   margin: auto 0;
 }
 
+.text-container p {
+  text-align: justify;
+}
 
 /* SKILLS SECTION */
 
@@ -379,7 +399,7 @@ section {
 }
 
 .skills-sub-title {
-  color: rgb(85, 85, 85);
+  color: rgb(255, 255, 255);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -452,9 +472,9 @@ skills.icon {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  border: rgb(255, 255, 255) 0.1rem solid;
+  border-color: rgb(255, 255, 255);
+  background: transparent;
   margin: 2rem auto;
   padding: 0.5rem;
 }
@@ -471,13 +491,12 @@ skills.icon {
   font-size: larger;
 }
 
-.contact-icon {
-  cursor: default;
+.contact-info-container a {
+  color: blac;
 }
 
-/* the email icon is smaller than the rest icon */
-.email-icon {
-  height: 2.5rem;
+.contact-icon {
+  cursor: default;
 }
 
 /* FOOTER SECTION */
@@ -497,5 +516,4 @@ footer p {
   position: absolute;
   left: 5rem;
   bottom: 4rem;
-}
 }
