--- a/style.css
+++ b/style.css
@@ -458,6 +458,19 @@ skills.icon {
   border-color: rgb(163, 163, 163);
 } */
 
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
 /* CONTACT */
 
 #contact {
