--- a/style.css
+++ b/style.css
@@ -353,17 +353,16 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: rgb(34, 38, 47);
+  background: transparent;
   border-radius: 2rem;
-  /* border: rgb(255, 253, 253) 0.1rem solid;
-  border-color: rgb(255, 255, 255); */
+  /* border: rgb(0, 0, 0) 0.1rem solid; */
   text-align: center;
   box-shadow: 5px 10px 20px #000000;
 }
 
-.details-container:hover {
+/* .details-container:hover {
   box-shadow: 5px 10px 50px #000000;
-}
+} */
 
 .details-container > p,
 h3 {
@@ -373,7 +372,7 @@ h3 {
 .details-container > p {
   text-align: start;
 }
-.details-container span{
+.details-container span {
   font-size: smaller;
   color: #f571bc;
 }
@@ -437,6 +436,11 @@ skills.icon {
   position: relative;
 }
 
+.project-containers {
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
 .color-container {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
@@ -458,18 +462,18 @@ skills.icon {
   border-color: rgb(163, 163, 163);
 } */
 
-.swiper {
+/* .swiper {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
-}
+} */
 
-.swiper-slide {
+/* .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 300px;
   height: 300px;
-}
+} */
 
 /* CONTACT */
 
@@ -488,7 +492,7 @@ skills.icon {
   border: rgb(255, 255, 255) 0.1rem solid;
   border-color: rgb(255, 255, 255);
   background: transparent;
-  margin: 2rem auto;
+  margin: 5rem auto;
   padding: 0.5rem;
 }
 
@@ -516,7 +520,7 @@ skills.icon {
 
 footer {
   position: relative;
-  height: 26vh;
+  height: 30vh;
   margin: 0 1 rem;
 }
 
