--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -62,9 +62,10 @@
 }
 
 @media screen and (max-width: 600px) {
+
   #contact,
   footer {
-    height: 40vh;
+    height: 50vh;
   }
   #profile {
     height: 83vh;
@@ -72,6 +73,7 @@
   }
   article {
     font-size: 1rem;
+    gap: 1rem;
   }
   footer nav {
     height: fit-content;
