--- a/style.css
+++ b/style.css
@@ -1,367 +1,407 @@
 /* GENERAL */
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;900&family=Poppins:wght@300;400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;900&family=Poppins:wght@300;400;500;600&display=swap');
 
 body {
-  font-family: "Montserrat", sans-serif;
-  font-family: "Poppins", sans-serif;
-  background: radial-gradient(purple, rgb(0, 0, 0) 60%);
-  color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(purple, rgb(0, 0, 0) 60%);
+    color: white;
 }
 
 h1 {
-  background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: none;
+    background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: none;
 }
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 p {
-  /* color: rgb(85, 85, 85); */
-  color: white;
+    /* color: rgb(85, 85, 85); */
+    color: white;
 }
 
 /* TRANSITION */
 
 a,
 .btn {
-  transition: all 300ms ease;
+    transition: all 300ms ease;
+}
+
+/* CURSOR */
+#cursor {
+    height: 20px;
+    width: 20px;
+    background-color: purple;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 9;
+}
+#cursor-blur {
+    height: 400px;
+    width: 400px;
+    background-color: rgb(128, 0, 128, 0.35);
+    border-radius: 50%;
+    position: fixed;
+    filter: blur(50px);
+}
+
+/* NAV BARS */
+
+#nav-bars {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 99;
 }
 
 /* DESKTOP NAV */
 
 nav,
 .nav-links {
-  display: flex;
+    width: 100%;
+    display: flex;
+    /* background-color: black; */
 }
 
 nav {
-  justify-content: space-around;
-  align-items: center;
-  height: 17vh;
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
+    z-index: 10;
 }
 
 .nav-links {
-  gap: 2rem;
-  list-style: none;
-  font-size: 1.5rem;
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+    z-index: 10;
+}
+
+#desktop-nav {
+    position: relative;
+    top: 0;
 }
 
 a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  text-decoration-color: white;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    text-decoration-color: white;
 }
 
 a:hover {
-  color: grey;
-  text-decoration: underline;
-  text-underline-offset: 1rem;
-  text-decoration-color: gray;
+    color: grey;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: gray;
 }
 
 .logo {
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 15px;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
 }
 
 .logo:hover {
-  cursor: default;
+    cursor: default;
 }
 
 .logo > img {
-  width: 2.5rem;
+    width: 2.5rem;
 }
 
 /* HAMBURGER MENU */
 
 #hamburger-nav {
-  display: none;
+    display: none;
 }
 
 .hamburger-menu {
-  display: inline;
-  position: relative;
+    display: inline;
+    position: relative;
 }
 
 .hamburger-icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  width: 30px;
-  cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
 }
 
 .hamburger-icon span {
-  width: 100%;
-  height: 2px;
-  background-color: rgb(255, 255, 255);
-  transition: all 0.3 ease-in-out;
+    width: 100%;
+    height: 2px;
+    background-color: rgb(255, 255, 255);
+    transition: all 0.3 ease-in-out;
 }
 
 .menu-links {
-  position: absolute;
-  z-index: 10;
-  margin-top: 20px;
-  top: 100%;
-  right: 0;
-  background-color: rgb(21, 21, 21);
-  padding: 0px 10px;
-  border-radius: 15px;
-  width: fit-content;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.3 ease-in-out;
+    position: absolute;
+    z-index: 10;
+    margin-top: 20px;
+    top: 100%;
+    right: 0;
+    background-color: rgb(21, 21, 21);
+    padding: 0px 10px;
+    border-radius: 15px;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
 }
 
 .menu-links a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  color: rgb(255, 255, 255);
-  font-size: 1.5rem;
-  text-decoration: none;
-  transition: all 0.3 ease-in-out;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
 }
 
 .menu-links a:hover {
-  color: grey;
+    color: grey;
 }
 
 .menu-links {
-  list-style: none;
+    list-style: none;
 }
 
 .menu-links.open {
-  max-height: 300px;
+    max-height: 300px;
 }
 
 .hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(10px, 5px);
+    transform: rotate(45deg) translate(10px, 5px);
 }
 .hamburger-icon.open span:nth-child(2) {
-  opacity: 0;
+    opacity: 0;
 }
 .hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(10px, -5px);
+    transform: rotate(-45deg) translate(10px, -5px);
 }
 
 .hamburger-icon span:first-child {
-  transform: none;
+    transform: none;
 }
 .hamburger-icon span:first-child {
-  opacity: 1;
+    opacity: 1;
 }
 .hamburger-icon span:first-child {
-  transform: none;
+    transform: none;
 }
 
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
-  height: 96vh;
-  margin: 0 10rem;
-  box-sizing: border-box;
-  min-height: fit-content;
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+    z-index: 10;
 }
 
 .section-container {
-  display: flex;
+    display: flex;
 }
 
 /* PROFILE SECTION */
 
 #profile {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  height: 80vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
 }
 .profile-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
 }
 
 .section__pic-container {
-  display: flex;
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
 }
 
 .section__text {
-  align-self: center;
-  text-align: center;
+    align-self: center;
+    text-align: center;
 }
 
 .section__text p {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .section__text__p1 {
-  text-align: center;
+    text-align: center;
 }
 
 .section__text__p2 {
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
 }
 
 .title {
-  font-size: 3rem;
-  text-align: center;
+    font-size: 3rem;
+    text-align: center;
 }
 
 #socials-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 2rem;
 }
 
 /* ICONS */
 
 .scroll-down {
-  position: absolute;
-  right: -5rem;
-  bottom: 2.5rem;
-  transition: all 0.5s;
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+    transition: all 0.5s;
 }
 .scroll-down:hover {
-  transform: translate(0px, 10px);
-  transition: all 0.5s;
+    transform: translate(0px, 10px);
+    transition: all 0.5s;
 }
 .scroll-text {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .icon {
-  cursor: pointer;
-  height: 1.3rem;
+    cursor: pointer;
+    height: 1.3rem;
 }
 
 .scroll-text > img {
-  height: 1rem;
-  width: 1rem;
-  margin-left: 5px;
+    height: 1rem;
+    width: 1rem;
+    margin-left: 5px;
 }
 
 .arrow {
-  position: absolute;
-  right: -5rem;
-  bottom: 2.5rem;
-  transition: all 0.5s;
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+    transition: all 0.5s;
 }
 
 .arrow:hover {
-  transform: translate(0px, 10px);
-  transition: all 0.5s ease-in-out;
+    transform: translate(0px, 10px);
+    transition: all 0.5s ease-in-out;
 }
 
 /* BUTTONS */
 
 .btn-container {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .btn {
-  font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
 }
 
 .btn-color-1,
 .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+    border: rgb(53, 53, 53) 0.1rem solid;
 }
 
 .btn-color-1:hover,
 .btn-color-2:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .btn-color-1,
 .btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
+    background: rgb(53, 53, 53);
+    color: white;
 }
 
 .btn-color-1:hover {
-  background: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
 }
 
 .btn-color-2 {
-  background: none;
+    background: none;
 }
 #profile .btn-color-2 {
-  color: white;
+    color: white;
 }
 
 .btn-color-2:hover {
-  border: rgb(255, 255, 255);
+    border: rgb(255, 255, 255);
 }
 
 /* ABOUT SECTION */
 
 #about {
-  position: relative;
+    position: relative;
 }
 
 .about-containers {
-  gap: 2rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 #about .details-container:hover {
-  box-shadow: 5px 10px 50px #000000;
+    box-shadow: 5px 10px 50px #000000;
 }
 
 .about-details-container {
-  justify-content: center;
-  flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .about-containers,
 .about-details-container {
-  display: flex;
+    display: flex;
 }
 
 .about-pic {
-  border-radius: 2rem;
+    border-radius: 2rem;
 }
 
 .details-container {
-  padding: 1.5rem;
-  flex: 1;
-  background: transparent;
-  border-radius: 2rem;
-  /* border: rgb(0, 0, 0) 0.1rem solid; */
-  text-align: center;
-  box-shadow: 5px 10px 20px #000000;
+    padding: 1.5rem;
+    flex: 1;
+    background: transparent;
+    border-radius: 2rem;
+    /* border: rgb(0, 0, 0) 0.1rem solid; */
+    text-align: center;
+    box-shadow: 5px 10px 20px #000000;
+    transform: ease-in-out 0.5s;
 }
 
 /* .details-container:hover {
@@ -370,116 +410,118 @@ section {
 
 .details-container > p,
 h3 {
-  color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
 .details-container > p {
-  text-align: start;
+    text-align: start;
 }
 .details-container span {
-  font-size: smaller;
-  color: #f571bc;
+    font-size: smaller;
+    color: #f571bc;
 }
 .section-container {
-  gap: 4rem;
-  height: 80%;
+    gap: 4rem;
+    height: 80%;
 }
 
 .section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
 }
 
 .text-container p {
-  text-align: justify;
+    text-align: justify;
 }
 
 /* SKILLS SECTION */
 
 #skills {
-  position: relative;
+    position: relative;
 }
 
 .skills-sub-title {
-  color: rgb(255, 255, 255);
-  font-weight: 600;
-  font-size: 1.3rem;
-  margin-bottom: 2rem;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
 }
 
 .skills-details-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #skills .details-container:hover {
-  box-shadow: 5px 10px 50px #000000;
+    background-color: black;
+    box-shadow: 5px 10px 50px #000000;
+    transform: rotate3d(1, 1, 1, 10deg);
 }
 
 .article-container {
-  display: flex;
-  /* text-align: center; */
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 0.8rem;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    /* text-align: center; */
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 0.8rem;
+    justify-content: center;
+    align-items: center;
 }
 
 article {
-  display: flex;
-  width: 7rem;
-  text-align: start;
-  justify-content: start;
-  align-items: center;
-  gap: 1.5rem;
+    display: flex;
+    width: 7rem;
+    text-align: start;
+    justify-content: start;
+    align-items: center;
+    gap: 1.5rem;
 }
 
 .article-container p {
-  font-size: x-small;
-  font-weight: lighter;
-  opacity: 0.7;
+    font-size: x-small;
+    font-weight: lighter;
+    opacity: 0.7;
 }
 
 #skills .icon {
-  cursor: default;
-  height: 20px;
-  width: 20px;
+    cursor: default;
+    height: 20px;
+    width: 20px;
 }
 
 /* PROJECTS SECTION */
 
 #projects {
-  position: relative;
+    position: relative;
 }
 
 .project-containers {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
 }
 
 .project-title {
-  margin: 1rem;
-  color: black;
+    margin: 1rem;
+    color: black;
 }
 
 #projects .details-container p {
-  color: #000000;
-  margin: 1rem;
-  text-align: center;
+    color: #000000;
+    margin: 1rem;
+    text-align: center;
 }
 
 /* .project-btn {
@@ -503,59 +545,60 @@ article {
 /* CONTACT */
 
 #contact {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 70vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
 }
 
 .contact-info-upper-container {
-  display: flex;
-  justify-content: center;
-  border-radius: 2rem;
-  border: rgb(255, 255, 255) 0.1rem solid;
-  border-color: rgb(255, 255, 255);
-  background: transparent;
-  margin: 5rem auto;
-  padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(255, 255, 255) 0.1rem solid;
+    border-color: rgb(255, 255, 255);
+    background: transparent;
+    margin: 5rem auto;
+    padding: 0.5rem;
 }
 
 .contact-info-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
 }
 
 .contact-info-container p {
-  font-size: larger;
+    font-size: larger;
 }
 
 .contact-info-container a {
-  color: blac;
+    color: blac;
 }
 
 .contact-icon {
-  cursor: default;
+    cursor: default;
 }
 
 /* FOOTER SECTION */
 
 footer {
-  position: relative;
-  height: 30vh;
-  margin: 0 1 rem;
+    position: relative;
+    height: 30vh;
+    margin: 0 1 rem;
+    z-index: 10;
 }
 
 footer p {
-  text-align: center;
+    text-align: center;
 }
 
 .reverse-arrow {
-  rotate: 180deg;
-  position: absolute;
-  left: 5rem;
-  bottom: 4rem;
+    rotate: 180deg;
+    position: absolute;
+    left: 5rem;
+    bottom: 4rem;
 }
