Update project thumbnail and skills icons, fix broken links, and improve styling

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -22,6 +22,11 @@
 }
 
 @media screen and (max-width: 1024px) {
+    #cursor,
+    #cursor-blur {
+        display: none;
+    }
+
     #desktop-nav {
         display: none;
     }
