--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,11 @@
+.section-container {
+    height: fit-content;
+}
+
+section {
+    margin: 0 5%;
+}
+
 @media screen and (max-width: 1024px) {
     nav {
         height: 10vh;
